# boiler_stuff

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp  test_LeNet98.cpp  videoIO.cpp  videoProc.cpp
src/: example.cpp
